Add alert status filtering support